--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -1,6 +1,4 @@
 parameters:
-  - name: azureSubscription
-  - name: resourceGroupName
   - name: pythonVersion
     default: '3.9'
   - name: debug
@@ -8,38 +6,23 @@ parameters:
     default: false
 
 steps:
-  - task: AzurePowerShell@5
-    displayName: 'Read Connection String'
-    name: readAppInsights
-    inputs:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      ScriptType: 'InlineScript'
-      Inline: |
-        $appInsightResource = Get-AzApplicationInsights -ResourceGroupName $(resourceGroupName)
-        $APPLICATIONINSIGHTS_CONNECTION_STRING = $appInsightResource.ConnectionString
-        Write-Host "##vso[task.setvariable variable=connectionString;issecret=true]$APPLICATIONINSIGHTS_CONNECTION_STRING"
-      azurePowerShellVersion: 'LatestVersion'
-      pwsh: true
-    env:
-      resourceGroupName: ${{ parameters.resourceGroupName }}
-
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
           echo "Variables:"
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $APPLICATIONINSIGHTS_CONNECTION_STRING"
-          echo "connectionString: $connectionString"
-          echo "SECRET_KEY: $SECRET_KEY"                                      # no
-          #### --------------------------------------------------------------- ####
-          echo "secretKey: $secretKey"                                        # yes
-          echo "SECRET_KEY: $(SECRET_KEY)"                                    # yes
-          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                        # yes
-          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"                        # yes
-          echo "PROJECTROOT: $PROJECTROOT"                                    # yes
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"   # yes
-          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"              # yes
-          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"        # yes
-          echo "secretKey: $(secretKey)"                                      # yes
-          #### --------------------------------------------------------------- ####
+          echo "SECRET_KEY: $SECRET_KEY"                                                       # no
+          #### -------------------------------------------------------------------------------- ####
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $APPLICATIONINSIGHTS_CONNECTION_STRING" # yes
+          echo "connectionString: $connectionString"                                           # yes
+          echo "secretKey: $secretKey"                                                         # yes
+          echo "SECRET_KEY: $(SECRET_KEY)"                                                     # yes
+          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                                         # yes
+          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"                                         # yes
+          echo "PROJECTROOT: $PROJECTROOT"                                                     # yes
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"                    # yes
+          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"                               # yes
+          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"                         # yes
+          echo "secretKey: $(secretKey)"                                                       # yes
+          #### -------------------------------------------------------------------------------- ####
           echo "With 'set':"
           set
           echo "With 'env':"
@@ -61,29 +44,28 @@ steps:
       addToPath: true
 
   - script: |
-      python3 -m venv antenv
-    displayName: install antenv
-    workingDirectory: $(projectRoot)
-
-  - script: |
+      python -m venv antenv
       source antenv/bin/activate
-      python3 -m pip install --upgrade pip setuptools wheel
-      # python3 -m pip install -r requirements.txt
+      python -m pip install --upgrade pip
+      pip install setup
       pip install -r requirements.txt
     workingDirectory: $(projectRoot)
-    displayName: 'Install tools and Requirements'
+    displayName: 'Install Requirements'
 
-  - script: |
-      export SECRET_KEY="$(secretKey)"
-      export APPLICATIONINSIGHTS_CONNECTION_STRING="$(connectionString)"
-      source antenv/bin/activate
-      python3 manage.py migrate
-      python3 manage.py createsuperuser --noinput
-      python3 manage.py test
-    workingDirectory: $(projectRoot)
-    displayName: 'migrate and create superuser'
-    env:
-      SECRET_KEY: ${{ variables.secretKey }}
-      APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
-      DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
-      DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
+  - task: ArchiveFiles@2
+    displayName: 'Archive files'
+    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+    inputs:
+      rootFolderOrFile: '$(projectRoot)'
+      includeRootFolder: false
+      archiveType: zip
+      archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      replaceExistingArchive: true
+
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Build Artifact
+    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
