--- a/azure-pipelines/publish_docs.yml
+++ b/azure-pipelines/publish_docs.yml
@@ -1,6 +1,7 @@
 # only publishing Docs of stable release for now - maybe I integrate 'mike' later
 trigger:
   - stable
+  - main
 
 # don't trigger for pull requests
 pr: none
@@ -13,33 +14,14 @@ variables:
     value: mkdocs-material
 
 steps:
-  # update MkDocs-Material Submodule
-  - template: jobs/steps/checkout_submodules.yml
+  - template: jobs/steps/build_mkdocs.yml
     parameters:
-      submodules:
-        - mkdocs-material
-
-  - task: UsePythonVersion@0
-    displayName: 'Use Python 3.9.x'
-    inputs:
-      versionSpec: '3.9'
-      addToPath: true
-      architecture: 'x64'
-
-  - task: Bash@3
-    displayName: 'Install MkDocs'
-    inputs:
-      targetType: 'inline'
-      script: 'pip install -e mkdocs-material'
-
-  - task: Bash@3
-    displayName: 'Build mkdocs'
-    inputs:
-      targetType: 'inline'
-      script: 'mkdocs build'
+      PYTHON_VERSION: 3.9
+      update_submodule: true
 
   - task: Bash@3
     displayName: 'Deploy to GitHub-Pages'
+    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
     inputs:
       targetType: 'inline'
       script: 'mkdocs gh-deploy --force --clean'
