--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -11,20 +11,20 @@ pool:
 variables:
   - group: django_gh
   - name: pythonVersion
-    value: 3.9
+    value: '3.9'
   - name: resourceGroupName
-    value: django_gh
+    value: 'django_gh'
   - name: location
-    value: westeurope
+    value: 'westeurope'
   - name: azureSubscription
-    value: django_gh
+    value: 'django_gh'
 
 stages:
   - stage: MkDocs
     dependsOn:
     jobs:
       - job: BuildDocs
-        displayName: Build MkDocs
+        displayName: 'Build MkDocs'
         dependsOn:
         steps:
           - template: jobs/steps/build_mkdocs.yml
@@ -35,7 +35,7 @@ stages:
     dependsOn:
     jobs:
       - job: BuildDjango
-        displayName: Build Django
+        displayName: 'Build Django'
         dependsOn:
         variables:
           - group: django-dev
@@ -49,11 +49,11 @@ stages:
               # debug: true
           - template: jobs/steps/get_appinsights_con_str.yml
             parameters:
-              azureSubscription: $[variables.azureSubscription]
-              resourceGroupName: $[variables.resourceGroup]
+              azureSubscription: $[ variables.azureSubscription ]
+              resourceGroupName: $[ variables.resourceGroup ]
           - template: jobs/steps/build_webapp_experimental.yml
             parameters:
-              pythonVersion: ${{ variables.pythonVersion }}
+              pythonVersion: $[ variables.pythonVersion ]
               debug: true
 
   - stage: Experimental_Django_Test
@@ -72,7 +72,7 @@ stages:
           - template: jobs/steps/python_django_test_experimental.yml
             parameters:
               PYTHON_VERSIONS:
-                - 3.10
-                - 3.9
-                - 3.8
-                - 3.7
+                - '3.10'
+                - '3.9'
+                - '3.8'
+                - '3.7'
