--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,22 @@ trigger:
   - stable
   - main
 
-pr: none
+pr:
+  - main
 
 variables:
   - group: django_gh
   - group: django-dev
   - group: django-superuser
+  - group: django_gh
+  - name: pythonVersion
+    value: '3.9'
+  - name: resourceGroupName
+    value: 'django_gh'
+  - name: location
+    value: 'westeurope'
+  - name: azureSubscription
+    value: 'django_gh'
 
 pool:
   vmImage: ubuntu-latest
