--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -3,7 +3,11 @@
 trigger:
   branches:
     include:
-      - feature/experimental/*
+      - main
+      - feature/*
+
+pr:
+  - main
 
 pool:
   vmImage: ubuntu-latest
