changing trigger of experimental ofc I need something for experiments at all

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -3,11 +3,12 @@
 trigger:
   branches:
     include:
-      - main
-      - feature/*
+      - feature/experimental/*
 
 pr:
-  - main
+  branches:
+    include:
+      - feature/*
 
 pool:
   vmImage: ubuntu-latest
