--- a/azure-pipelines/jobs/DeploymentJob.yml
+++ b/azure-pipelines/jobs/DeploymentJob.yml
@@ -1,7 +1,7 @@
 jobs:
   - deployment: DeploymentJob
     pool:
-    vmImage: $(vmImageName)
+      vmImage: $(vmImageName)
     environment: $(environmentName)
     strategy:
       runOnce:
@@ -15,6 +15,7 @@ jobs:
             - task: AzureWebApp@1
               displayName: 'Deploy Azure Web App : {{ webAppName }}'
               inputs:
+                appType: webAppLinux
                 azureSubscription: $(azureServiceConnectionId)
                 appName: $(webAppName)
                 package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
