--- a/azure-pipelines/jobs/validate_bicep.yml
+++ b/azure-pipelines/jobs/validate_bicep.yml
@@ -1,43 +1,48 @@
 jobs:
-  - job: LintBicep
+  - job: lintBicep
     displayName: Lint Bicep File
+    continueOnError: false
     steps:
       - script: az bicep build --file main.bicep
-        name: LintBicepCode
         displayName: Run Bicep Linter
+        name: LintBicepCode
 
-  - job: ValidateBicepCode
+  - job: validateBicepCode
+    continueOnError: false
     displayName: Validate Bicep code
     steps:
       - task: AzureCLI@2
         name: RunPreflightValidation
         displayName: Run preflight validation
         inputs:
-          azureSubscription: '$(azureSubscription)'
-          scriptType: 'bash'
-          scriptLocation: 'inlineScript'
+          azureSubscription: $(azureSubscription)
+          scriptType: bash
+          scriptLocation: inlineScript
           inlineScript: |
             az deployment group validate \
               --resource-group $(ResourceGroupName) \
               --template-file main.bicep \
-              --parameters secretKey=$(secretKey)
+              --parameters \
+                secretKey=$(secretKey)
         env:
-          secretKey: '$(secretKey)'
+          secretKey: $(secretKey)
 
-  - job: PreviewAzureChanges
+  - job: previewAzureChanges
     displayName: Preview Azure changes
+    continueOnError: false
     steps:
       - task: AzureCLI@2
         name: RunWhatIf
         displayName: Run what-if
         inputs:
           azureSubscription: $(azureSubscription)
-          scriptType: 'bash'
-          scriptLocation: 'inlineScript'
+          scriptType: bash
+          scriptLocation: inlineScript
           inlineScript: |
             az deployment group what-if \
               --resource-group $(ResourceGroupName) \
               --template-file main.bicep \
-              --parameters secretKey=$(secretKey)
+              --parameters \
+                secretKey=$(secretKey)
         env:
-          secretKey: '$(secretKey)'
+          secretKey: $(secretKey)
