--- a/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
+++ b/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
@@ -1,21 +1,25 @@
 ## Search all subdirectories for 'manage.py' and create projectRoot variable
 
 parameters:
-  - name: 'PYTHON_VERSION'
+  - name: PYTHON_VERSION
     type: string
     default: '3.9'
 
 steps:
+  - template: checkout_submodules.yml
+    parameters:
+      submodule: django_webapp
+
   - task: UsePythonVersion@0
     displayName: Use Python version ${{ parameters.PYTHON_VERSION }}
     inputs:
       versionSpec: ${{ parameters.PYTHON_VERSION }}
-      architecture: 'x64'
+      architecture: x64
 
   - task: PythonScript@0
-    displayName: 'Export project path'
+    displayName: Export project path
     inputs:
-      scriptSource: 'inline'
+      scriptSource: inline
       script: |
         """Search all subdirectories for `manage.py`."""
         from glob import iglob
