--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,11 +29,11 @@ site_description: >-
 
 # Repository
 repo_name: mauwii/django_devops
-repo_url: https://github.com/Mauwii/django_devops/
+repo_url: https://github.com/Mauwii/django_devops
 edit_uri: edit/main/docs/
 
 # Copyright
-copyright: Copyright &copy; 2022 Copyright &copy; 2022 Matthias Wild
+copyright: Copyright &copy; 2022 Matthias Wild
 
 # Configuration
 theme:
@@ -52,20 +52,21 @@ theme:
   language: en
   features:
     - content.code.annotate
-    - content.tabs.link
+    # - content.tabs.link
+    - content.tooltips
     # - header.autohide
-    - navigation.expand
+    # - navigation.expand
     - navigation.indexes
-    - navigation.instant
+    # - navigation.instant
     - navigation.sections
     - navigation.tabs
-    - navigation.tabs.sticky
-    # - navigation.top
+    # - navigation.tabs.sticky
+    - navigation.top
     - navigation.tracking
     - search.highlight
     - search.share
     - search.suggest
-    - toc.follow
+    # - toc.follow
     - toc.integrate
   palette:
     - media: '(prefers-color-scheme: light)'
@@ -88,7 +89,7 @@ theme:
 # Customization
 extra:
   social:
-    - icon: fontawesome/brands/github
+    - icon: fontawesome/brands/github-alt
       link: https://github.com/mauwii
     - icon: fontawesome/brands/keybase
       link: https://keybase.io/mauwi
@@ -136,3 +137,9 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+
+# Plugins
+plugins:
+  - search
+  - git-revision-date-localized:
+      fallback_to_build_date: true
