--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,5 +141,4 @@ markdown_extensions:
 # Plugins
 plugins:
   - search
-  - git-revision-date-localized:
-      fallback_to_build_date: true
+  - git-revision-date
